fix footer container on small screen

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1538,7 +1538,8 @@ button {
 
 // media 1300
 @media (max-width: 1300px) {
-  .container-wide {
+  .container-wide,
+  .footer__container {
     max-width: 1200px;
   }
 
